--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jack Hone - Senior Product Designer</title>
+    <title>Jack Hone - Product Designer</title>
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
@@ -34,7 +34,7 @@
         <header class="fade-in">
             <div class="header-left">
                 <h1>Jack Hone</h1>
-                <h2>Senior Product Designer</h2>
+                <h2>Product Designer</h2>
             </div>
             <div class="header-right">
                 <p>Based in London, designing experience commerce at <a href="#" class="external-link">Easol</a>. Previously at Bulb, Airbnb and ustwo.</p>
