--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
           <div class="work-card-content">
             <h3 class="work-card-title">Airbnb Design System</h3>
-            <p class="work-card-desc">Systematise a concept and roll it out</p>
+            <p class="work-card-desc">Systematise a concept and roll it out.</p>
           </div>
         </div>
       </div>
