--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+gn<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -66,7 +66,7 @@
           </div>
           <div class="work-card-content">
             <h3 class="work-card-title">Airbnb Design System</h3>
-            <p class="work-card-desc">Systematise a concept and roll it out.</p>
+            <p class="work-card-desc">Systematise a concept and design the systems for rolling it out.</p>
           </div>
         </div>
       </div>
