--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
       <div class="hero-now">
         <div class="now-label">Now</div>
-        <div class="now-desc">Absolutely addicted to <a href="https://open.spotify.com/playlist/0BG0rGP5eP9MXZDMvlFrrV?si=96a86446fbac487b"target="_blank" rel="noopener" class="contact-link">this playlist</a> atm. Watching my way through The Last of Us. Trying to catch up with everything released at Config. Loving <a href="https://www.youtube.com/watch?v=-kTD5HgJDjg"target="_blank" rel="noopener" class="contact-link">this guys</a> videos for their very English content.</div>
+        <div class="now-desc">Absolutely addicted to <a href="https://open.spotify.com/playlist/0BG0rGP5eP9MXZDMvlFrrV?si=96a86446fbac487b"target="_blank" rel="noopener" class="contact-link">this playlist</a> atm. Watching my way through The Last of Us. Trying to catch up with everything released at Config. Loving <a href="https://www.youtube.com/watch?v=-kTD5HgJDjg"target="_blank" rel="noopener" class="contact-link">this guy's</a> videos for their very English content.</div>
         <div class="now-updated">Updated 1 day ago</div>
       </div>
     </section>
