Updated to use a fixed footer

--- a/index.html
+++ b/index.html
@@ -11,172 +11,177 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
-  <main class="container">
-    <section class="hero">
-      <div class="hero-logo" aria-label="Logo">
-        <img src="assets/logo.svg" alt="Jack Hone logo" width="48" height="48">
-      </div>
-      <h1 class="hero-title">Jack Hone</h1>
-      <p class="hero-tagline">Craft focused designer with over a decade of experience building from zero to one.</p>
-      <div class="hero-work">
-        <div class="work-item">
-          <div class="work-period">2014 - 2017</div>
-          <div class="work-place">ustwo</div>
-          <div class="work-desc">Consumer banking and entertainment.</div>
+  <div class="content-wrapper">
+    <main class="container">
+      <section class="hero">
+        <div class="hero-logo" aria-label="Logo">
+          <img src="assets/logo.svg" alt="Jack Hone logo" width="48" height="48">
         </div>
-        <div class="work-item">
-          <div class="work-period">2017 - 2020</div>
-          <div class="work-place">Airbnb</div>
-          <div class="work-desc">Design systems and internal tooling.</div>
-        </div>
-        <div class="work-item">
-          <div class="work-period">2020 - 2022</div>
-          <div class="work-place">Bulb Energy</div>
-          <div class="work-desc">Design systems and data visualisations.</div>
-        </div>
-        <div class="work-item">
-          <div class="work-period">2022 - Now</div>
-          <div class="work-place">Easol</div>
-          <div class="work-desc">SaaS tool with a consumer side.</div>
-        </div>
-      </div>
-      <div class="hero-now">
-        <div class="now-label">Now</div>
-        <div class="now-desc">Absolutely addicted to <a href="https://open.spotify.com/playlist/0BG0rGP5eP9MXZDMvlFrrV?si=96a86446fbac487b"target="_blank" rel="noopener" class="contact-link">this playlist</a> atm. Watching my way through The Last of Us. Trying to catch up with everything released at Config. Loving <a href="https://www.youtube.com/watch?v=-kTD5HgJDjg"target="_blank" rel="noopener" class="contact-link">this guys</a> videos for their very English content.</div>
-        <div class="now-updated">Updated 1 day ago</div>
-      </div>
-    </section>
-    <section id="work">
-      <h2>Work</h2>
-      <div class="card-grid">
-        <div class="work-card">
-          <div class="work-card-image">
-            <img src="assets/Easol.png" alt="Packages" class="work-card-img">
-            <span class="tag">Coming soon</span>
+        <h1 class="hero-title">Jack Hone</h1>
+        <p class="hero-tagline">Craft focused designer with over a decade of experience building from zero to one.</p>
+        <div class="hero-work">
+          <div class="work-item">
+            <div class="work-period">2014 - 2017</div>
+            <div class="work-place">ustwo</div>
+            <div class="work-desc">Consumer banking and entertainment.</div>
           </div>
-          <div class="work-card-content">
-            <h3 class="work-card-title">Packages</h3>
-            <p class="work-card-desc">Combine complex products into configurable bundles.</p>
+          <div class="work-item">
+            <div class="work-period">2017 - 2020</div>
+            <div class="work-place">Airbnb</div>
+            <div class="work-desc">Design systems and internal tooling.</div>
+          </div>
+          <div class="work-item">
+            <div class="work-period">2020 - 2022</div>
+            <div class="work-place">Bulb Energy</div>
+            <div class="work-desc">Design systems and data visualisations.</div>
+          </div>
+          <div class="work-item">
+            <div class="work-period">2022 - Now</div>
+            <div class="work-place">Easol</div>
+            <div class="work-desc">SaaS tool with a consumer side.</div>
           </div>
         </div>
-        <div class="work-card">
-          <div class="work-card-image">
-            <img src="assets/Airbnb.png" alt="Airbnb Design System" class="work-card-img">
-            <span class="tag">Coming soon</span>
+        <div class="hero-now">
+          <div class="now-label">Now</div>
+          <div class="now-desc">Absolutely addicted to <a href="https://open.spotify.com/playlist/0BG0rGP5eP9MXZDMvlFrrV?si=96a86446fbac487b"target="_blank" rel="noopener" class="contact-link">this playlist</a> atm. Watching my way through The Last of Us. Trying to catch up with everything released at Config. Loving <a href="https://www.youtube.com/watch?v=-kTD5HgJDjg"target="_blank" rel="noopener" class="contact-link">this guys</a> videos for their very English content.</div>
+          <div class="now-updated">Updated 1 day ago</div>
+        </div>
+      </section>
+      <section id="work">
+        <h2>Work</h2>
+        <div class="card-grid">
+          <div class="work-card">
+            <div class="work-card-image">
+              <img src="assets/Easol.png" alt="Packages" class="work-card-img">
+              <span class="tag">Coming soon</span>
+            </div>
+            <div class="work-card-content">
+              <h3 class="work-card-title">Packages</h3>
+              <p class="work-card-desc">Combine complex products into configurable bundles.</p>
+            </div>
           </div>
-          <div class="work-card-content">
-            <h3 class="work-card-title">Airbnb Design System</h3>
-            <p class="work-card-desc">Combine complex products into configurable bundles.</p>
+          <div class="work-card">
+            <div class="work-card-image">
+              <img src="assets/Airbnb.png" alt="Airbnb Design System" class="work-card-img">
+              <span class="tag">Coming soon</span>
+            </div>
+            <div class="work-card-content">
+              <h3 class="work-card-title">Airbnb Design System</h3>
+              <p class="work-card-desc">Combine complex products into configurable bundles.</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="work-table-wrapper">
-        <table class="work-table">
-          <thead>
-            <tr>
-              <th>Title</th>
-              <th>Tags</th>
-            </tr>
-          </thead>
-          <tbody id="work-table-body">
-            <tr><td>Point of Sale</td><td><span class="tag">Tablet</span> <span class="tag">Research</span> <span class="tag">Visual</span><span class="tag">IXD</span></td></tr>
-            <tr><td>Reporting consistency improvements</td><td><span class="tag">Systems</span> <span class="tag">Data</span></td></tr>
-            <tr><td>PII redaction</td><td><span class="tag">Content</span><span class="tag">Compliance</span></td></tr>
-            <tr><td>Two factor authentication</td><td><span class="tag">Content</span></td></tr>
-            <tr><td>Terminal payments</td><td><span class="tag">Integration</span> <span class="tag">Onboarding</span></td></tr>
-            <tr class="extra-row"><td>Accessibility compliance</td><td><span class="tag">Inclusivity</span> <span class="tag">Systems</span></td></tr>
-            <tr class="extra-row"><td>Manual pay payment plans</td><td><span class="tag">Design led</span> <span class="tag">Content</span> <span class="tag">Desk research</span></td></tr>
-            <tr class="extra-row"><td>LBE creator site</td><td><span class="tag">Consumer</span> <span class="tag">Conversion</span> <span class="tag">Client</span></td></tr>
-            <tr class="extra-row"><td>Global artist tour site</td><td><span class="tag">Consumer</span> <span class="tag">Conversion</span> <span class="tag">Client</span></td></tr>
-            <tr class="extra-row"><td>Site experience improvements</td><td><span class="tag">Systems</span> <span class="tag">Conversion</span></td></tr>
-            <tr class="extra-row"><td>Reserved cart</td><td><span class="tag">Consumer</span> <span class="tag">Systems</span></td></tr>
-            <tr class="extra-row"><td>Flexible packages</td><td><span class="tag">Architecture</span> <span class="tag">Content</span></td></tr>
-            <tr class="extra-row"><td>US Sales Tax</td><td><span class="tag">Audit</span> <span class="tag">Leading</span></td></tr>
-            <tr class="extra-row"><td>Booking edits redesign</td><td><span class="tag">Visual</span> <span class="tag">AI</span></td></tr>
-            <tr class="extra-row"><td>Custom terms & conditions</td><td><span class="tag">Content</span></td></tr>
-          </tbody>
-        </table>
-        <a href="#" id="toggle-table" class="show-more-link">Show more</a>
-      </div>
-      <script>
-        const toggleLink = document.getElementById('toggle-table');
-        const extraRows = document.querySelectorAll('.extra-row');
-        let expanded = false;
-        function updateTable() {
-          extraRows.forEach(row => row.style.display = expanded ? '' : 'none');
-          toggleLink.textContent = expanded ? 'Show less' : 'Show more';
-        }
-        toggleLink.addEventListener('click', function(e) {
-          e.preventDefault();
-          expanded = !expanded;
+        <div class="work-table-wrapper">
+          <table class="work-table">
+            <thead>
+              <tr>
+                <th>Title</th>
+                <th>Tags</th>
+              </tr>
+            </thead>
+            <tbody id="work-table-body">
+              <tr><td>Point of Sale</td><td><span class="tag">Tablet</span> <span class="tag">Research</span> <span class="tag">Visual</span><span class="tag">IXD</span></td></tr>
+              <tr><td>Reporting consistency improvements</td><td><span class="tag">Systems</span> <span class="tag">Data</span></td></tr>
+              <tr><td>PII redaction</td><td><span class="tag">Content</span><span class="tag">Compliance</span></td></tr>
+              <tr><td>Two factor authentication</td><td><span class="tag">Content</span></td></tr>
+              <tr><td>Terminal payments</td><td><span class="tag">Integration</span> <span class="tag">Onboarding</span></td></tr>
+              <tr class="extra-row"><td>Accessibility compliance</td><td><span class="tag">Inclusivity</span> <span class="tag">Systems</span></td></tr>
+              <tr class="extra-row"><td>Manual pay payment plans</td><td><span class="tag">Design led</span> <span class="tag">Content</span> <span class="tag">Desk research</span></td></tr>
+              <tr class="extra-row"><td>LBE creator site</td><td><span class="tag">Consumer</span> <span class="tag">Conversion</span> <span class="tag">Client</span></td></tr>
+              <tr class="extra-row"><td>Global artist tour site</td><td><span class="tag">Consumer</span> <span class="tag">Conversion</span> <span class="tag">Client</span></td></tr>
+              <tr class="extra-row"><td>Site experience improvements</td><td><span class="tag">Systems</span> <span class="tag">Conversion</span></td></tr>
+              <tr class="extra-row"><td>Reserved cart</td><td><span class="tag">Consumer</span> <span class="tag">Systems</span></td></tr>
+              <tr class="extra-row"><td>Flexible packages</td><td><span class="tag">Architecture</span> <span class="tag">Content</span></td></tr>
+              <tr class="extra-row"><td>US Sales Tax</td><td><span class="tag">Audit</span> <span class="tag">Leading</span></td></tr>
+              <tr class="extra-row"><td>Booking edits redesign</td><td><span class="tag">Visual</span> <span class="tag">AI</span></td></tr>
+              <tr class="extra-row"><td>Custom terms & conditions</td><td><span class="tag">Content</span></td></tr>
+            </tbody>
+          </table>
+          <a href="#" id="toggle-table" class="show-more-link">Show more</a>
+        </div>
+        <script>
+          const toggleLink = document.getElementById('toggle-table');
+          const extraRows = document.querySelectorAll('.extra-row');
+          let expanded = false;
+          function updateTable() {
+            extraRows.forEach(row => row.style.display = expanded ? '' : 'none');
+            toggleLink.textContent = expanded ? 'Show less' : 'Show more';
+          }
+          toggleLink.addEventListener('click', function(e) {
+            e.preventDefault();
+            expanded = !expanded;
+            updateTable();
+          });
           updateTable();
-        });
-        updateTable();
-      </script>
-    </section>
-    <!-- <section id="writing">
-      <h2>Writing</h1>
-    </section> -->
-    <section id="speaking">
-      <h2>Speaking</h2>
-      <div class="card-grid">
-        <figure class="speaking-item">
-          <img src="assets/easol-showcase.png" alt="Easol Showcase" class="speaking-img">
-          <figcaption>
-            <div class="speaking-title">Easol Showcase Festivals Edition</div>
-            <div class="speaking-caption">Panel host for Easol's second product showcase.</div>
-          </figcaption>
-        </figure>
-        <figure class="speaking-item">
-          <img src="assets/image 6.png" alt="Easol Showcase" class="speaking-img">
-          <figcaption>
-            <div class="speaking-title">How to make apps and respect people</div>
-            <div class="speaking-caption">Presented for Friends of Figma alongside <a href="https://natbuckley.co.uk/" target="_blank" class="contact-link">Nat Buckley</a>.</div>
-          </figcaption>
-        </figure>
-        <figure class="speaking-item">
-          <img src="assets/flipping-icebergs.png" alt="Flipping icebergs" class="speaking-img">
-          <figcaption>
-            <div class="speaking-title">Flipping Icebergs</div>
-            <div class="speaking-caption">Presented to students at Norwich University of the Arts.</div>
-          </figcaption>
-        </figure>
-        <figure class="speaking-item">
-          <img src="assets/future-rising.png" alt="Future Rising" class="speaking-img">
-          <figcaption>
-            <div class="speaking-title">FutureRising</div>
-            <div class="speaking-caption">Presented to students at Leeds Arts University.</div>
-          </figcaption>
-        </figure>
-      </div>
-    </section>
-    <section id="lets-talk">
-      <h2>Let's talk</h2>
-      <p class="lets-talk-desc">If my experience is relevant to you, hit me up! I'd love to chat to other designers working on similar projects, or founders at a similar stage to Easol.</p>
-      <div class="contact-list">
-        <div class="contact-row">
-          <span class="contact-key">LinkedIn</span>
-          <span class="contact-value"><a href="https://www.linkedin.com/in/jackhone" target="_blank" rel="noopener" class="contact-link">@jackhone</a></span>
+        </script>
+      </section>
+      <!-- <section id="writing">
+        <h2>Writing</h1>
+      </section> -->
+      <section id="speaking">
+        <h2>Speaking</h2>
+        <div class="card-grid">
+          <figure class="speaking-item">
+            <img src="assets/easol-showcase.png" alt="Easol Showcase" class="speaking-img">
+            <figcaption>
+              <div class="speaking-title">Easol Showcase Festivals Edition</div>
+              <div class="speaking-caption">Panel host for Easol's second product showcase.</div>
+            </figcaption>
+          </figure>
+          <figure class="speaking-item">
+            <img src="assets/image 6.png" alt="Easol Showcase" class="speaking-img">
+            <figcaption>
+              <div class="speaking-title">How to make apps and respect people</div>
+              <div class="speaking-caption">Presented for Friends of Figma alongside <a href="https://natbuckley.co.uk/" target="_blank" class="contact-link">Nat Buckley</a>.</div>
+            </figcaption>
+          </figure>
+          <figure class="speaking-item">
+            <img src="assets/flipping-icebergs.png" alt="Flipping icebergs" class="speaking-img">
+            <figcaption>
+              <div class="speaking-title">Flipping Icebergs</div>
+              <div class="speaking-caption">Presented to students at Norwich University of the Arts.</div>
+            </figcaption>
+          </figure>
+          <figure class="speaking-item">
+            <img src="assets/future-rising.png" alt="Future Rising" class="speaking-img">
+            <figcaption>
+              <div class="speaking-title">FutureRising</div>
+              <div class="speaking-caption">Presented to students at Leeds Arts University.</div>
+            </figcaption>
+          </figure>
         </div>
-        <div class="contact-row">
-          <span class="contact-key">Threads</span>
-          <span class="contact-value"><a href="https://www.threads.com/jackhone target="_blank" rel="noopener" class="contact-link">@jackhone</a></span>
+      </section>
+      <section id="lets-talk">
+        <h2>Let's talk</h2>
+        <p class="lets-talk-desc">If my experience is relevant to you, hit me up! I'd love to chat to other designers working on similar projects, or founders at a similar stage to Easol.</p>
+        <div class="contact-list">
+          <div class="contact-row">
+            <span class="contact-key">LinkedIn</span>
+            <span class="contact-value"><a href="https://www.linkedin.com/in/jackhone" target="_blank" rel="noopener" class="contact-link">@jackhone</a></span>
+          </div>
+          <div class="contact-row">
+            <span class="contact-key">Threads</span>
+            <span class="contact-value"><a href="https://www.threads.com/jackhone target="_blank" rel="noopener" class="contact-link">@jackhone</a></span>
+          </div>
+          <div class="contact-row">
+            <span class="contact-key">Email</span>
+            <span class="contact-value"><a href="mailto:jackhone@gmail.com" class="contact-link">jackhone@gmail.com</a></span>
+          </div>
         </div>
-        <div class="contact-row">
-          <span class="contact-key">Email</span>
-          <span class="contact-value"><a href="mailto:jackhone@gmail.com" class="contact-link">jackhone@gmail.com</a></span>
-        </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
+  </div>
   <footer class="site-footer">
-    <div class="footer-content">
-      <p class="footer-text">Built in North London with Cursor.</p>
-      <div class="footer-logo">
-        <img src="assets/logo.svg" alt="Jack Hone logo" width="48" height="48" class="footer-logo-img" id="footer-logo">
+    <div class="footer-content-wrapper">
+      <div class="footer-content">
+        <p class="footer-text">Built in North London with Cursor.</p>
+        <div class="footer-logo">
+          <img src="assets/logo.svg" alt="Jack Hone logo" width="48" height="48" class="footer-logo-img" id="footer-logo">
+        </div>
       </div>
     </div>
     <div><p class="footer-name">Hone</p></div>
+
   </footer>
   <script>
     document.getElementById('footer-logo').addEventListener('click', () => {
@@ -187,3 +192,4 @@
     });
   </script>
 </body>
+</html>
