Switched font, removed footer, updated now

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
@@ -43,7 +44,7 @@
         </div>
         <div class="hero-now">
           <div class="now-label">Now</div>
-          <div class="now-desc">Absolutely addicted to <a href="https://open.spotify.com/playlist/0BG0rGP5eP9MXZDMvlFrrV?si=96a86446fbac487b"target="_blank" rel="noopener" class="contact-link">this playlist</a> atm. Watching my way through The Last of Us. Trying to catch up with everything released at Config. Loving <a href="https://www.youtube.com/watch?v=-kTD5HgJDjg"target="_blank" rel="noopener" class="contact-link">this guys</a> videos for their very English content.</div>
+          <div class="now-desc">Will soon be wrapping up a 10 week Runna training plan, goal is to eventually run a half-marathon. Put in some fast times recently, using Spotify DJ to get the right pace. On a more nerdy note, I've moved all my notes over to Obsidian, giving it a try.</div>
           <div class="now-updated" id="now-updated">Updated 1 day ago</div>
         </div>
       </section>
@@ -75,7 +76,7 @@
           <table class="work-table">
             <thead>
               <tr>
-                <th>Title</th>
+                <th>Other work</th>
                 <th>Tags</th>
               </tr>
             </thead>
@@ -180,8 +181,6 @@
         </div>
       </div>
     </div>
-    <div><p class="footer-name">Hone</p></div>
-
   </footer>
   <script>
     document.addEventListener('DOMContentLoaded', function() {
@@ -194,7 +193,7 @@
 
       // Function to calculate and display time difference
       function updateTimeDifference() {
-        const targetDate = new Date('2025-05-14');
+        const targetDate = new Date('2025-07-25');
         const currentDate = new Date();
         const diffTime = Math.abs(targetDate - currentDate);
         const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
