Cleaned up footer and increased type sized

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <div class="footer-content">
         <p class="footer-text">Built in North London with Cursor.</p>
         <div class="footer-logo">
-          <img src="assets/logo-light.svg" alt="Jack Hone logo" width="60" height="60" class="footer-logo-img" id="footer-logo">
+          <img src="assets/logo-dark.svg" alt="Jack Hone logo" width="60" height="60" class="footer-logo-img" id="footer-logo">
         </div>
       </div>
     </div>
